--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+    .navbar-icon {
+        @apply relative flex items-center justify-center
+                h-12 w-12 
+                bg-slate-800 text-stone-200
+                hover:bg-slate-700 hover:text-stone-50
+                rounded-3xl hover:rounded-xl
+                transition-all duration-200 ease-linear
+                cursor-pointer;
+    }
+    .navbar-tooltip {
+        @apply absolute w-auto p-2 m-2 min-w-max left-14
+        rounded-md shadow-md  z-10
+        text-white bg-gray-900
+        text-xs font-bold
+        transition-all duration-100 scale-0 origin-left;
+    }
+    .top-navigation-icon {
+        @apply text-gray-500
+        mt-4 mb-2 mx-auto 
+        transition duration-300 ease-in-out 
+        hover:text-yellow-200 
+        cursor-pointer;
+      }
+    
+     
+}
