--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
         @apply 
             relative flex items-center justify-center
             h-12 w-12 
-            md:hover:bg-slate-700
+            md:hover:bg-blue-700
             rounded-3xl hover:rounded-xl
             transition-all duration-100 ease-linear
             cursor-pointer;
